# Glyphser

./: .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PUBLIC_PRIVATE_BOUNDARY.md  README.md  REDUCE_TO_VANILLA.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  VERSIONING.md  WHITEPAPER.md  dist  ecosystem-graph.yaml  ecosystem-registry.yaml  ecosystem-validation-log.md  ecosystem.md  fixtures  generated  glyphser_security_hardening_master_todo.txt  goldens  milestones.txt  mypy.ini  portfolio-release-notes-template.md  pyproject.toml  reduce_to_vanilla.py  run_codex_until_done.sh  run_glyphser_hardening_prompt  run_glyphser_hardening_prompt.txt  vectors
.githooks/: pre-commit-hardening.sample
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.required.json
artifacts/: README.md
conformance/: reports  results
contracts/: catalog-manifest.json  openapi_public_api_v1.yaml  operator_registry_source.json
distribution/: README.md
docs/: ALTERNATIVES.md  API_LIFECYCLE_SLA.md  API_REFERENCE.md  API_STABILITY.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_IMPACT.md  BENCHMARK_REGISTRY.md  BOUNDARY_GATES.md  BRAND.md  CI_SNIPPETS.md  COMPATIBILITY_MATRIX.md  DEPRECATION_POLICY.md  DIAGRAMS.md  DOCKER_QUICKSTART.md  DOCS_INDEX.md  EVIDENCE_FORMATS.md  EVIDENCE_LIFECYCLE.md  EVIDENCE_METADATA.md  EXTERNAL_VALIDATION_PACK.md  GATE_TELEMETRY.md  GETTING_STARTED.md  GLOSSARY.md  HELLO_CORE_NEXT_STEPS.md  INDEPENDENT_VERIFICATION.md  INTEGRATIONS.md  ISSUE_BACKLOG.md  PROOF_DEMO.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  REPO_MAP.md  SECURITY_SCANNING.md  SPEC_IMPLEMENTATION_MATRIX.md  STABILITY_CONTRACT.md  START-HERE.md  TRACEABILITY.md  TUTORIAL_PIPELINE.md  USE_CASES.md  VERIFY.md  WHITEPAPER_public.md
evidence/: README.md
examples/: mlflow_integration.py  proof_demo.py  pytorch_determinism.py  scikit_determinism.py  tensorflow_determinism.py
glyphser/: __init__.py  cli.py
goldens/: golden_inventory.json
governance/: README.md
notebooks/: quickstart.ipynb
product/: README.md
runtime/: README.md  __init__.py
schemas/: SCHEMA_CONVENTIONS.txt  SCHEMA_FORMAT_DECISION.txt  contract_schema_meta.json  l3_operator_error_vectors.schema.json  l3_operator_vectors.schema.json
scripts/: run_hello_core.py
site/: index.md
specs/: README.md
tests/: conftest.py  test_determinism_repeat.py  test_error_codes_manifest.py  test_error_emit.py  test_operator_vectors.py  test_replay_binding.py  test_replay_suite.py
tooling/: README.md  api_cli.py  api_contract_gate.py  build_operator_registry.py  build_release_bundle.py  coverage_report.py  doc_code_separation_gate.py  error_code_gate.py  external_validation_gate.py  fixtures_gate.py  legacy_path_gate.py  materialize_doc_artifacts.py  operator_vectors.py  path_config.py  push_button.py  registry_gate.py  release_evidence_gate.py  reproducibility_check.py  schema_gate.py  security_artifacts.py  spec_lint.py  (+6 more)
(+2839 files in other folders)
